--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,8 +23,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: npx gulp-cli dist --codelabs-dir=codelabs
-    - uses: jsmrcaga/action-netlify-deploy@master
+    - run: npm run build
+    - name: Deploy to Netlify
+      uses: jsmrcaga/action-netlify-deploy@master
       with:
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
