--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "start": "gulp serve",
-    "build": "gulp dist"
+    "start": "gulp serve --codelabs-dir=codelabs",
+    "build": "gulp dist --codelabs-dir=codelabs"
   },
   "devDependencies": {
     "autoprefixer": "^9.3.1",
